# epd24rwb

./: .build.yml  .env  .gitignore  .gitignore copy  .gitignore copy 2  .travis copy.yml  .travis.yml  Cargo.toml  README.md  build-and-copy-to-pi.sh  epd24rwb.service  wellkom.md
src/: agni-pagni.rs  config.rs  lib.rs  main.rs
